# jyotish-content-manager

./: .gitignore  API_CONFIG.md  BACKEND_CHANGES_SUMMARY.md  CORS_SOLUTION_SUMMARY.md  DEPLOYMENT.md  DIAGNOSTICOS.md  FRONTEND_CHANGES_SUMMARY.md  MEJORAS_PANCHANGA.md  MEJORAS_UX.md  PRUEBAS_PRECISION.md  README.md  debug-api-calls.html  env.example  package.json  pnpm-lock.yaml  setup.sh  vercel.json
.github/workflows/: deploy.yml
apps/backend/: .dockerignore  Dockerfile  README.md  deploy.sh  env.sample  main.py  pyproject.toml  test_api.py  test_main.py
apps/backend/data/: navatara.es.json  panchanga.recommendations.es.json  yogas.rules.json
apps/backend/scripts/: fetch_fixtures.py  validate_month.py
apps/backend/tests/: test_golden.py
apps/frontend/: CLEANUP_REPORT.md  ECLIPSE_API_SPEC.md  README-VERCEL.md  debug-api-loading.html  deploy-vercel.sh  deploy.sh  env.production.sample  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vercel.json
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/components/: AnimatedPanel.tsx  ChestaBalaDailyPanel.tsx  ChestaBalaPanel.tsx  ConnectionStatus.tsx  ErrorBoundary.tsx  JsonDataDebug.tsx  Layout.tsx  LocationAutocomplete.tsx  (+2 more)
apps/jyotish-panchanga-stable/: .env.production  README-VERCEL.md  deploy-vercel.sh  env.sample  vite.config.ts
apps/jyotish-panchanga-stable/src/: App.tsx  vite-env.d.ts
apps/jyotish-panchanga-stable/tests/: navatara.spec.ts  panchanga.spec.ts  transits.spec.ts
json-database/: Nakashatras.json  TIthi.json  Vara.json  karanas.json  navatara.es.json  nitya-yogas.json  panchanga-simplified.json  panchanga_rules.json  yogas-special.json
(+31 files in other folders)
