[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jyotish-backend"
version = "0.1.0"
description = "FastAPI backend for Jyotish calculations"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Jyotish Team", email = "team@jyotish.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pyswisseph>=2.10.0",
    "pytz>=2023.3",
    "python-dateutil>=2.8.2",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.scripts]
dev = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
start = "uvicorn main:app --host 0.0.0.0 --port 8000"
test = "pytest -v"
test-golden = "pytest tests/test_golden.py -v"
fetch-fixtures = "python scripts/fetch_fixtures.py"
validate-month = "python scripts/validate_month.py"

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ['py39']
line-length = 88

[tool.hatch.build.targets.wheel]
packages = ["."]
